feature: EF core

--- a/src/WebApplication.RazorPages/appsettings.Development.json
+++ b/src/WebApplication.RazorPages/appsettings.Development.json
@@ -1,5 +1,9 @@
 {
   "DetailedErrors": true,
+  "ConnectionStrings": {
+    "DefaultConnection" : "Data source=RazorPagesDatabase.db",
+    "DefaultConnectionSqlServer" : "Server=RazorPagesServer;Database=RazorPagesDatabase;User Id=myUsername;Password=myPassword;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
